# invenio-base

./: .bowerrc  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  requirements.py  run-tests.sh  setup.cfg  setup.py  views.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  usage.rst
examples/: app.py  proxy_cli.py  test_proxy_cli.py
invenio_base/: __init__.py  __main__.py  app.py  before_request_functions.py  bundles.py  cli.py  cmd.py  config.py  decorators.py  factory.py  helpers.py  i18n.py  jws.py  manage.py  signals.py  utils.py  version.py  wrappers.py  wsgi.py
invenio_base/cookiecutter-invenio-base/: cookiecutter.json
invenio_base/cookiecutter-invenio-base/{{ cookiecutter.site_name }}/: manage.py  pytest.ini  requirements-devel.txt  setup.py
invenio_base/cookiecutter-invenio-base/{{ cookiecutter.site_name }}/{{ cookiecutter.package_name }}/: __init__.py  celery.py  cli.py  config.py  factory.py  version.py  views.py  wsgi.py
invenio_base/cookiecutter-invenio-base/{{ cookiecutter.site_name }}/{{ cookiecutter.package_name }}/templates/{{ cookiecutter.package_name }}/: index.html
invenio_base/scripts/: apache.py  config.py  database.py  demosite.py
invenio_base/urls/: __init__.py  builders.py  helpers.py  proxies.py
tests/: conftest.py  test_app.py  test_cmd.py  test_flash_security.py  test_i18n.py  test_jws.py  test_manage.py  test_scripts_config.py  test_serializer.py  test_signals.py  test_signer.py  test_timed.py  test_urls.py  test_utils.py  test_views.py  test_wsgi.py
tests/test_apps/flash_msg/: views.py
