[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
no_implicit_optional = true

# third party imports
[[tool.mypy.overrides]]
module = [
    "werkzeug.*",
    "flask.*",
    "click.*",
    "blinker.*",
    "itsdangerous.*",
    "jinja2.*",
    "markupsafe.*"
]
ignore_missing_imports = true

# test files
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
