# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2022 CERN.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-base
version = attr: invenio_base.__version__
description = "Base package for building Invenio application factories."
long_description = file: README.rst, CHANGES.rst
keywords = invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-base
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    blinker>=1.4
    Flask>=1.1.4,<3.0.0
    itsdangerous>=1.1.0,<2.1.0
    MarkupSafe>=2.0
    Werkzeug>=1.0.1,<3.0
    # importlib needed until Python 3.9 end of life since we're using
    # importlib.metadata features from v3.10). Version numbers are aligned with
    # Python v3.10 feature set.
    importlib-metadata>=4.4
    importlib-resources>=5.0

[options.extras_require]
tests =
    pytest-invenio>=1.4.2
    sphinx>=4.2.0

[options.entry_points]
console_scripts =
    inveniomanage = invenio_base.__main__:cli
flask.commands =
    instance = invenio_base.cli:instance

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
