# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2022-2024 CERN.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-base
version = attr: invenio_base.__version__
description = "Base package for building Invenio application factories."
long_description = file: README.rst, CHANGES.rst
keywords = invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-base
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
# move to >=3.10 upon agreed date
python_requires = >=3.7
zip_safe = False
install_requires =
    blinker>=1.4
    Flask>=3.0.0
    itsdangerous>=2.1.0
    MarkupSafe>=0.23
    Werkzeug>=3.0.0
    watchdog>2.0.0
    # importlib needed until Python 3.9 end of life since we're using
    # importlib.metadata features from v3.10). Version numbers are aligned with
    # Python v3.10 feature set.
    importlib-metadata>=4.4
    importlib-resources>=5.0

[options.extras_require]
tests =
    # necessary because of jws tests
    freezegun>=1.5.1
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.2
    sphinx>=4.2.0

[options.entry_points]
console_scripts =
    inveniomanage = invenio_base.__main__:cli
flask.commands =
    instance = invenio_base.cli:instance

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401, D202

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_base --cov-report=term-missing
testpaths = docs tests invenio_base
filterwarnings = ignore::pytest.PytestDeprecationWarning
